# football-analyst

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml  start.sh
.claude/: settings.json
.claude/skills/nfl-data-context/: SKILL.md
.claude/skills/nfl-mcp-playbook/: SKILL.md
.claude/skills/sec-review/: SKILL.md  categories.md
.github/workflows/: ci.yml
.streamlit/: config.toml
analysis/: opportunity_gap.py
app/: Home.py
app/pages/: 1_MCP_Chat.py
docs/: byok-chat-plan.md  mcp-server-plan.md
eval/blind/: prompts.jsonl  run.sh  summarize.py
mcp_server/: db.py  semantics.md  server.py  tools_draft.py  tools_market.py  tools_opportunity.py  tools_players.py
pipeline/: adp.py  db.py  refresh.py  refresh_all.sh  sleeper.py
tests/: test_mcp_server.py
