[project]
name = "nfl-analysis"
version = "0.1.0"
description = "Local-first NFL data warehouse (DuckDB) with a curated MCP server exposing fantasy-football analysis tools to Claude, plus a Streamlit explorer."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.2.122",
    "duckdb>=1.5.4,<2",
    "mcp>=1.28.1,<2",
    "nflreadpy>=0.1.5,<0.2",
    "plotly>=6.9.0,<7",
    "polars>=1.42.1,<2",
    "pyarrow>=24.0.0,<25",
    "requests>=2.34.2,<3",
    "streamlit>=1.59.2,<2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1,<10",
]
